RESOLVED FIXED259284
SQLiteDatabase::turnOnIncrementalAutoVacuum() is broken
https://bugs.webkit.org/show_bug.cgi?id=259284
Summary SQLiteDatabase::turnOnIncrementalAutoVacuum() is broken
Adrien Destugues
Reported 2023-07-17 11:37:12 PDT
See the patch here: https://github.com/haiku/haikuwebkit/commit/c8f63951a5f3d5acfd7c40d1606f830272ad791b This problem already existed a long time ago and was fixed in https://bugs.webkit.org/show_bug.cgi?id=229886 But then it was broken again in https://bugs.webkit.org/show_bug.cgi?id=249598 which results in accessing lastError after the statement is destroyed, instead of before. As a sidenote I think https://bugs.webkit.org/show_bug.cgi?id=68465 was also fixed by the second of these changes, and can be closed.
Attachments
Radar WebKit Bug Importer
Comment 1 2023-07-18 09:41:07 PDT
Ben Nham
Comment 2 2023-07-18 11:15:31 PDT
*** Bug 259312 has been marked as a duplicate of this bug. ***
Ben Nham
Comment 3 2023-07-18 11:18:22 PDT
Ben Nham
Comment 4 2023-07-18 11:21:16 PDT
Thanks for spotting this regression, we will try to apply the fix.
EWS
Comment 5 2023-07-18 14:28:15 PDT
Committed 266139@main (a4485084ec04): <https://commits.webkit.org/266139@main> Reviewed commits have been landed. Closing PR #15908 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.